--- a/styles.scss
+++ b/styles.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  font-family: "Merriweather", serif;
+  font-family: 'Merriweather', serif;
   background-color: #F6F4EB;
   margin: 0;
 }
@@ -57,5 +57,3 @@ main {
 aside {
   flex: 1;
 }
-
-/*# sourceMappingURL=styles.css.map */
