--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,48 @@
+:root {
+  --body-background-color: #F6F4EB;
+  --primary-color: #000000;
+}
+
 html {
   scroll-behavior: smooth;
 }
 
 body {
   font-family: "Merriweather", serif;
-  background-color: #F6F4EB;
+  background-color: var(--body-background-color);
   margin: 0;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  flex: 2;
+  gap: 2rem;
+  padding: 5rem 0;
+}
+
+aside {
+  flex: 1;
+}
+
 h1 {
-  font-size: 3.5rem;
-  margin: 0 0 3rem;
+  margin: 0;
   font-weight: normal;
   line-height: 1.25;
   letter-spacing: -1px;
+}
+@media only screen and (min-width: 767px) {
+  h1 {
+    font-size: 3.5rem;
+  }
+}
+
+h2 {
+  margin-top: 0;
+}
+
+.cv__heading {
+  margin: 0;
 }
 
 .cv-button {
@@ -33,29 +62,70 @@ h1 {
   padding: 0 1rem;
 }
 
-.cv__row {
-  padding: 2rem 0;
-  border-bottom: 1px solid #9b9993;
+.cv__item {
+  position: relative;
+  border-left: 2px dashed var(--primary-color);
+  padding: 0 0 2rem 2rem;
+  margin-left: 1.5rem;
+}
+.cv__item:last-child {
+  padding-bottom: 0;
 }
 
-.cv__row:last-child {
-  border-bottom: none;
+.cv__position {
+  margin-top: 0;
 }
 
-main {
-  flex: 2;
-  padding: 5rem 0;
+.cv__date {
+  margin-bottom: 0;
 }
 
-.main__column {
-  padding: 5rem 0;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+.cv__indicator {
+  position: absolute;
+  top: -2px;
+  left: -15px;
+  border: 2px dashed var(--primary-color);
+  padding: 0.25rem;
+  border-radius: 50%;
+  background-color: var(--body-background-color);
+  transition: 0.5s;
+}
+.cv__indicator.cv__indicator--present {
+  animation: 1s scale-indicator infinite;
 }
 
-aside {
-  flex: 1;
+.indicator__inner {
+  background-color: var(--primary-color);
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  transition: 0.5s;
+}
+.cv__indicator--present .indicator__inner {
+  animation: 1s color-indicator infinite;
+}
+
+@keyframes color-indicator {
+  0% {
+    background-color: var(--primary-color);
+  }
+  50% {
+    background-color: #116A7B;
+  }
+  100% {
+    background-color: var(--primary-color);
+  }
+}
+@keyframes scale-indicator {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
