--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-:root {
-  --body-background-color: #F6F4EB;
-  --primary-color: #000000;
-  --secondary-color: #016A70;
-  --button-padding: 1rem;
-}
-
 @font-face {
   font-family: "Basier Circle";
   src: url("BasierCircle-Regular.eot");
@@ -13,7 +6,7 @@
   font-style: normal;
 }
 @font-face {
-  font-family: "Basier Circle";
+  font-family: "Basier Circle Medium";
   src: url("BasierCircle-Medium.eot");
   src: local("Basier Circle Medium"), local("BasierCircle-Medium"), url("BasierCircle-Medium.eot?#iefix") format("embedded-opentype"), url("BasierCircle-Medium.woff2") format("woff2"), url("BasierCircle-Medium.woff") format("woff"), url("BasierCircle-Medium.ttf") format("truetype");
   font-weight: 500;
@@ -38,6 +31,92 @@
   font-weight: normal;
   font-style: normal;
 }
+:root {
+  --body-background-color: #F6F4EB;
+  --primary-color: #000000;
+  --secondary-color: #016A70;
+  --button-padding: 1rem;
+  --border-color: #001524;
+  --body-color: #001524;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  box-sizing: border-box;
+  color: var(--body-color);
+  font-family: "Basier Circle";
+  background-color: var(--body-background-color);
+}
+
+.site-container, .footer__container, .header__container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+.container {
+  display: flex;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+/* Header */
+header {
+  margin-bottom: 3.5rem;
+  padding: 1rem 0;
+}
+
+/* Sections */
+.section {
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+  transition: transform 0.25s ease-in-out;
+}
+.section:hover {
+  cursor: pointer;
+  transform: scale(1.025);
+}
+
+.section__heading {
+  font-family: "Basier Circle Medium";
+  text-transform: uppercase;
+  font-size: 16px;
+  letter-spacing: 1px;
+  margin: 0;
+}
+
+.section__card {
+  background-color: #ffffff;
+  padding: 2rem 3rem;
+  border-radius: 5px;
+  border: 2px dashed #001524;
+  box-shadow: #e6e4db 10px 10px 0px;
+}
+
+.section__card-content {
+  position: relative;
+  border-left: 2px dashed var(--primary-color);
+  padding: 0 0 2rem 2rem;
+}
+.section__card-content:last-child {
+  padding-bottom: 0;
+}
+
+/* Footer */
+footer {
+  color: #ffffff;
+  background-color: #001524;
+  padding: 2rem 0;
+  margin-top: 3.5rem;
+}
+
+/* Headings */
 h1,
 h2,
 h3,
@@ -47,23 +126,24 @@ h6 {
   font-family: "cooper_md_btmedium";
 }
 
+.heading {
+  margin: 0;
+  font-family: "cooper_lt_btlight";
+}
+.heading span {
+  font-family: "cooper_md_btmedium";
+}
+@media only screen and (min-width: 767px) {
+  .heading {
+    font-size: 2.85rem;
+  }
+}
+
 .test {
   font-family: "Basier Circle";
   font-size: 18px;
   line-height: 1.5;
   margin: 0;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: "Merriweather", serif;
-  background-color: var(--body-background-color);
-  margin: 0;
-  padding: 5rem 1rem;
-  box-sizing: border-box;
 }
 
 main {
@@ -84,42 +164,9 @@ aside {
   }
 }
 
-h1 {
-  margin: 0;
-  font-weight: normal;
-  font-family: "cooper_lt_btlight";
-}
-@media only screen and (min-width: 767px) {
-  h1 {
-    font-size: 2.85rem;
-  }
-}
-
 h2 {
   margin-top: 0;
   font-size: 20px;
-}
-
-.cv__button-container {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-  width: 100%;
-  padding: 1rem;
-  background-color: #ffffff;
-  box-sizing: border-box;
-}
-
-.cv__button {
-  display: none;
-  background-color: var(--secondary-color);
-  color: #ffffff;
-  font-weight: bold;
-  text-decoration: none;
-  padding: var(--button-padding);
-  border-radius: 5px;
-  text-align: center;
 }
 
 .cv__projects {
@@ -143,15 +190,18 @@ h2 {
   border-radius: 5px;
 }
 
-.cv__heading {
-  margin: 0;
-}
-
-.cv__nav {
+/* Sidebar */
+.sidebar__nav-list {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   list-style: none;
+}
+
+.sidebar__nav-link {
+  font-family: "cooper_md_btmedium";
+  color: var(--primary-color);
+  text-decoration: none;
 }
 
 .cv {
@@ -165,22 +215,8 @@ h2 {
   background-color: #ffffff;
   padding: 2rem 3rem;
   border-radius: 5px;
-  border: 2px dashed black;
+  border: 2px dashed #001524;
   box-shadow: #e6e4db 10px 10px 0px;
-}
-
-.cv__nav-item {
-  color: var(--primary-color);
-  text-decoration: none;
-}
-
-.cv__item {
-  position: relative;
-  border-left: 2px dashed var(--primary-color);
-  padding: 0 0 2rem 2rem;
-}
-.cv__item:last-child {
-  padding-bottom: 0;
 }
 
 .cv__position {
