--- a/styles.scss
+++ b/styles.scss
@@ -23,7 +23,7 @@
 }
 
 @font-face {
-  font-family: 'Basier Circle';
+  font-family: 'Basier Circle Bold';
   src: url('BasierCircle-Bold.eot');
   src: local('Basier Circle Bold'), local('BasierCircle-Bold'),
       url('BasierCircle-Bold.eot?#iefix') format('embedded-opentype'),
@@ -50,13 +50,24 @@
   font-style: normal;
 }
 
+$nav-background-color: #1A1C20;
+
 :root {
   --body-background-color: #F6F4EB;
   --primary-color: #000000;
   --secondary-color: #016A70;
+  --accent-color: #016A70;
   --button-padding: 1rem;
   --border-color: #001524;
   --body-color: #001524;
+
+  --nav-link-color: #ffffff;
+  --navbar-background-color: #{$nav-background-color};
+}
+
+.dark-mode {
+  --body-color: #ffffff;
+  --body-background-color: #1A1C20;
 }
 
 html {
@@ -79,11 +90,16 @@ body {
 
 .container {
   display: flex;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 1rem;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  max-width: 800px;
+  margin: 4rem auto;
+  gap: 3rem;
+}
+ 
 /* Header */
 
 header {
@@ -102,11 +118,6 @@ header {
   flex-direction: column;
   gap: 1.25rem;
   transition: transform 0.25s ease-in-out;
-
-  &:hover {
-    cursor: pointer;
-    transform: scale(1.025);
-  }
 }
 
 .section__heading {
@@ -135,19 +146,6 @@ header {
   }
 }
 
-/* Footer */
-
-footer {
-  color: #ffffff;
-  background-color: #001524;
-  padding: 2rem 0;
-  margin-top: 3.5rem;
-}
-
-.footer__container {
-  @extend .site-container;
-}
-
 /* Headings */
 
 h1,
@@ -157,6 +155,7 @@ h4,
 h5,
 h6 {
   font-family: 'cooper_md_btmedium';
+  font-weight: normal;
 }
 
 .heading {
@@ -169,30 +168,6 @@ h6 {
 
   @media only screen and (min-width: 767px) {
     font-size: 2.85rem;
-  }
-}
-
-.test {
-  font-family: 'Basier Circle';
-  font-size: 18px;
-  line-height: 1.5;
-  margin: 0;
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-  flex: 2;
-  gap: 2rem;
-}
-
-aside {
-  display: none;
-
-  @media only screen and (min-width: 767px) {
-    display: flex;
-    justify-content: flex-end;
-    flex: 1;
   }
 }
 
@@ -223,21 +198,6 @@ h2 {
     color: black;
     border-radius: 5px;
   }
-}
-
-/* Sidebar */
-
-.sidebar__nav-list {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  list-style: none;
-}
-
-.sidebar__nav-link {
-  font-family: 'cooper_md_btmedium';
-  color: var(--primary-color);
-  text-decoration: none;
 }
 
 .cv {
