--- a/styles.scss
+++ b/styles.scss
@@ -50,28 +50,9 @@
   font-style: normal;
 }
 
-$nav-background-color: #1A1C20;
-
 :root {
-  --body-background-color: #F6F4EB;
-  --primary-color: #000000;
-  --secondary-color: #016A70;
-  --accent-color: #016A70;
-  --button-padding: 1rem;
-  --border-color: #001524;
   --body-color: #001524;
-
-  --nav-link-color: #ffffff;
-  --navbar-background-color: #{$nav-background-color};
-}
-
-.dark-mode {
-  --body-color: #ffffff;
-  --body-background-color: #1A1C20;
-}
-
-html {
-  scroll-behavior: smooth;
+  --body-background-color: #F6F4EB;
 }
 
 body {
@@ -82,188 +63,78 @@ body {
   background-color: var(--body-background-color);
 }
 
-main {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 2.5rem 1rem;
-}
- 
 /* Header */
 
 header {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 1rem;
+  position: sticky;
+  top: 0;
+  padding: 1.5rem;
+  box-sizing: border-box;
 }
 
-/* Sections */
-
-.section {
+.header__container {
   display: flex;
-  flex-direction: column;
-  gap: 1.25rem;
-  transition: transform 0.25s ease-in-out;
+  justify-content: space-between;
 }
 
-.section__heading {
-  font-family: 'Basier Circle Medium';
-  text-transform: uppercase;
-  font-size: 16px;
-  letter-spacing: 1px;
-  margin: 0;
-}
+.header__column {
+  display: flex;
+  align-items: center;
 
-.section__card {
-  background-color: #ffffff;
-  padding: 2rem 3rem;
-  border-radius: 5px;
-  border: 2px dashed #001524;
-  box-shadow: #e6e4db 10px 10px 0px;
-}
-
-.section__card-content {
-  position: relative;
-  border-left: 2px dashed var(--primary-color);
-  padding: 0 0 2rem 2rem;
-
-  &:last-child {
-    padding-bottom: 0;
+  &.header__column--actions {
+    display: flex;
+    gap: 0.5rem;
   }
 }
 
-/* Headings */
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'cooper_md_btmedium';
-  font-weight: normal;
+.header__button {
+  background: none;
+  border: none;
+  padding: 0;
+  line-height: 0;
 }
 
-.heading {
+/* Banner */
+
+.banner {
+  padding: 1.5rem;
+}
+
+.banner__content {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  color: #000000;
+}
+
+.banner__heading {
+  font-weight: normal;
   margin: 0;
-  font-family: 'cooper_lt_btlight';
+  font-size: 2rem;
+  font-family: 'cooper_lt_btlight'; 
 
   span {
     font-family: 'cooper_md_btmedium';
   }
-
-  @media only screen and (min-width: 767px) {
-    font-size: 2.85rem;
-  }
 }
 
-h2 {
-  margin-top: 0;
-  font-size: 20px;
-}
-
-.cv__projects {
-  list-style: none;
-  padding: 0;
+.banner__text {
+  font-family: 'Basier Circle';
+  font-size: 16px;
+  line-height: 1.65;
   margin: 0;
-
-  li {
-    border-bottom: 2px dashed #000000;
-
-    &:last-child {
-      border-bottom: none;
-    }
-  }
-
-  a {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    font-weight: bold;
-    padding: 1rem;
-    color: black;
-    border-radius: 5px;
-  }
 }
 
-.cv {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  position: relative;
-}
-
-.cv__row {
-  background-color: #ffffff;
-  padding: 2rem 3rem;
-  border-radius: 5px;
-  border: 2px dashed #001524;
+.banner__button {
+  align-self: flex-start;
+  background-color: #000000;
+  color: #ffffff;
+  padding: 1rem 2rem;
+  text-decoration: none;
+  font-family: 'Basier Circle Medium';
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 14px;
+  border-radius: 4px;
   box-shadow: #e6e4db 10px 10px 0px;
-}
-
-.cv__position {
-  margin-top: 0;
-}
-
-.cv__date {
-  margin-bottom: 0;
-}
-
-.cv__indicator {
-  position: absolute;
-  top: -2px;
-  left: -15px;
-  border: 2px dashed var(--primary-color);
-  padding: 0.25rem;
-  border-radius: 50%;
-  background-color: var(--body-background-color);
-  transition: 0.5s;
-
-  &.cv__indicator--present {
-    animation: 1s scale-indicator ease-in-out infinite;
-  }
-}
-
-.cv__indicator-inner {
-  background-color: var(--primary-color);
-  width: 1rem;
-  height: 1rem;
-  border-radius: 50%;
-  transition: 0.5s;
-
-  .cv__indicator--present & {
-    animation: 1s color-indicator ease-in-out infinite;
-  }
-}
-
-/* Animations */
-
-@keyframes color-indicator {
-  0% {
-    background-color: var(--primary-color);
-  }
-
-  50% {
-    background-color: var(--secondary-color);
-  }
-
-  100% {
-    background-color: var(--primary-color);
-  }
-}
-
-@keyframes scale-indicator {
-  0% {
-    transform: scale(1);
-  }
-
-  50% {
-    transform: scale(1.1);
-  }
-
-  100% {
-    transform: scale(1);
-  }
 }
