--- a/styles.scss
+++ b/styles.scss
@@ -67,6 +67,10 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column; 
+  justify-content: space-between;
+  height: 100vh;
   margin: 0;
   box-sizing: border-box;
   color: var(--body-color);
@@ -113,7 +117,7 @@ header {
 /* Banner */
 
 .banner {
-  padding: 1.5rem;
+  padding: 1.5rem 1.5rem 3rem;
 }
 
 .banner__content {
