--- a/styles.scss
+++ b/styles.scss
@@ -71,6 +71,7 @@ body {
   flex-direction: column; 
   justify-content: space-between;
   height: 100vh;
+  overflow: hidden;
   margin: 0;
   box-sizing: border-box;
   color: var(--body-color);
