--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,6 @@
 body {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   height: 100vh;
   overflow: hidden;
   margin: 0;
@@ -96,7 +95,11 @@ header {
 
 /* Banner */
 .banner {
+  flex-grow: 1;
+  display: flex;
+  align-items: flex-end;
   padding: 1.5rem 1.5rem 3rem;
+  box-sizing: border-box;
 }
 
 .banner__content {
