--- a/styles.scss
+++ b/styles.scss
@@ -69,7 +69,6 @@
 body {
   display: flex;
   flex-direction: column; 
-  justify-content: space-between;
   height: 100vh;
   overflow: hidden;
   margin: 0;
@@ -118,7 +117,11 @@ header {
 /* Banner */
 
 .banner {
+  flex-grow: 1;
+  display: flex;
+  align-items: flex-end;
   padding: 1.5rem 1.5rem 3rem;
+  box-sizing: border-box;
 }
 
 .banner__content {
