--- a/styles.scss
+++ b/styles.scss
@@ -66,10 +66,14 @@
   --banner-button-text-color: #001524;
 }
 
+body,
+html {
+  height: 100%;
+}
+
 body {
   display: flex;
   flex-direction: column; 
-  height: 100vh;
   overflow: hidden;
   margin: 0;
   box-sizing: border-box;
@@ -120,7 +124,7 @@ header {
   flex-grow: 1;
   display: flex;
   align-items: flex-end;
-  padding: 1.5rem 1.5rem 3rem;
+  padding: 0 1.5rem;
   box-sizing: border-box;
 }
 
