--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ header {
   flex-grow: 1;
   display: flex;
   align-items: flex-end;
-  padding: 0 1.5rem;
+  padding: 3rem 1.5rem;
   box-sizing: border-box;
 }
 
