--- a/styles.scss
+++ b/styles.scss
@@ -124,7 +124,7 @@ header {
   flex-grow: 1;
   display: flex;
   align-items: flex-end;
-  padding: 0 1.5rem;
+  padding: 3rem 1.5rem;
   box-sizing: border-box;
 }
 
