--- a/styles.css
+++ b/styles.css
@@ -114,6 +114,12 @@ header {
   line-height: 0;
   stroke: var(--header-button-color);
 }
+.header__button.header__button--toggle {
+  fill: var(--header-button-color);
+}
+.light-mode .header__button.header__button--toggle {
+  fill: none;
+}
 
 /* Banner */
 .banner {
