--- a/styles/styles.css
+++ b/styles/styles.css
@@ -152,7 +152,7 @@ header {
 
 .banner__text {
   font-family: "Basier Circle";
-  font-size: 16px;
+  font-size: 17px;
   line-height: 1.65;
   margin: 0;
 }
@@ -161,7 +161,7 @@ header {
   align-self: flex-start;
   background-color: var(--banner-button-color);
   color: var(--banner-button-text-color);
-  padding: 1rem 2rem;
+  padding: 1rem;
   text-decoration: none;
   font-family: "Basier Circle Bold";
   text-transform: uppercase;
@@ -205,7 +205,7 @@ nav ul li a {
   align-items: center;
   justify-content: center;
   padding: 0.5rem;
-  color: #FFFFFF;
+  color: var(--body-color);
   font-size: 2rem;
   text-decoration: none;
   font-family: "Basier Circle";
