--- a/styles/styles.css
+++ b/styles/styles.css
@@ -157,8 +157,8 @@ body {
 .hero {
   display: flex;
   align-items: flex-end;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   padding: 2rem;
   box-sizing: border-box;
 }
