--- a/styles/styles.css
+++ b/styles/styles.css
@@ -88,7 +88,7 @@
 /* General */
 body,
 html {
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
@@ -157,8 +157,8 @@ body {
 .hero {
   display: flex;
   align-items: flex-end;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   padding: 2rem;
   box-sizing: border-box;
 }
