--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -116,7 +116,7 @@
 
 body, 
 html {
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
@@ -194,8 +194,8 @@ body {
 .hero {
   display: flex;
   align-items: flex-end;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   padding: 2rem;
   box-sizing: border-box;
 
