--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -195,7 +195,7 @@ body {
   display: flex;
   align-items: flex-end;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   padding: 2rem;
   box-sizing: border-box;
 
