--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -188,7 +188,7 @@ html {
 main {
   display: flex;
   flex-direction: row;
-  height: 100vh;
+  height: 100dvh;
   overflow-x: scroll;
   scroll-snap-type: x mandatory;
 }
