--- a/styles/styles.css
+++ b/styles/styles.css
@@ -91,7 +91,7 @@ a {
 }
 
 h1 {
-  font-size: var(--font-size-h1-mobile);
+  font-size: clamp(42px, 5vw + 1rem, 100px);
 }
 
 h2 {
@@ -175,11 +175,6 @@ html {
 .hero__heading {
   margin: 0;
 }
-@media only screen and (min-width: 720px) {
-  .hero__heading {
-    font-size: 6.5rem;
-  }
-}
 
 .hero__text {
   font-family: "honest";
@@ -198,14 +193,10 @@ html {
   font-weight: bold;
   margin: 0;
   line-height: 1.3;
+  font-size: clamp(24px, 2vw + 1rem, 42px);
 }
 .section--richtext__text strong {
   color: var(--color-primary);
-}
-@media only screen and (min-width: 720px) {
-  .section--richtext__text {
-    font-size: 3rem;
-  }
 }
 
 /* Divider */
