--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -113,7 +113,7 @@ a {
 }
 
 h1 {
-  font-size: var(--font-size-h1-mobile);
+  font-size: clamp(42px, 5vw + 1rem, 100px);
 }
 
 h2 {
@@ -198,10 +198,6 @@ html {
 
 .hero__heading {
   margin: 0;
-
-  @media only screen and (min-width: 720px) {
-    font-size: 6.5rem;
-  }
 }
 
 .hero__text {
@@ -221,13 +217,10 @@ html {
   font-weight: bold;
   margin: 0;
   line-height: 1.3;
+  font-size: clamp(24px, 2vw + 1rem, 42px);
 
   strong {
     color: var(--color-primary);
-  }
-
-  @media only screen and (min-width: 720px) {
-    font-size: 3rem;
   }
 }
 
