--- a/styles/styles.css
+++ b/styles/styles.css
@@ -95,7 +95,7 @@ h1 {
 }
 
 h2 {
-  font-size: var(--font-size-h2-mobile);
+  font-size: clamp(24px, 2vw + 1rem, 60px);
 }
 
 h3 {
@@ -104,7 +104,6 @@ h3 {
 
 h1, h3 {
   font-family: "honest";
-  font-weight: bold;
 }
 
 h3 {
@@ -178,13 +177,7 @@ html {
 
 .hero__text {
   font-family: "honest";
-  font-weight: bold;
   margin: 0;
-}
-@media only screen and (min-width: 720px) {
-  .hero__text {
-    font-size: 3.25rem;
-  }
 }
 
 /* Richtext */
