--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -117,7 +117,7 @@ h1 {
 }
 
 h2 {
-  font-size: var(--font-size-h2-mobile);
+  font-size: clamp(24px, 2vw + 1rem, 60px);
 }
 
 h3 {
@@ -126,7 +126,6 @@ h3 {
 
 h1, h3 {
   font-family: "honest";
-  font-weight: bold;
 }
 
 h3 {
@@ -202,12 +201,7 @@ html {
 
 .hero__text {
   font-family: "honest";
-  font-weight: bold;
   margin: 0;
-
-  @media only screen and (min-width: 720px) {
-    font-size: 3.25rem;
-  }
 }
 
 /* Richtext */
