--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,7 +99,7 @@ h2 {
 }
 
 h3 {
-  font-size: var(--font-size-h3-mobile);
+  font-size: clamp(24px, 2vw + 1rem, 60px);
 }
 
 h1, h3 {
@@ -109,11 +109,6 @@ h1, h3 {
 h3 {
   font-family: "honest";
   font-weight: bold;
-}
-@media only screen and (min-width: 720px) {
-  h3 {
-    font-size: 3rem;
-  }
 }
 
 html {
