--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,13 +68,6 @@
   --color-text: #f1dadd;
   --color-primary: #00FFAF;
   --color-button-background: #FFF;
-  --font-size-body: 18px;
-  --font-size-h1-mobile: 36px;
-  --font-size-h2-mobile: 20px;
-  --font-size-h3-mobile: 20px;
-  --font-size-h4-mobile: 20px;
-  --font-size-h5-mobile: 20px;
-  --font-size-h6-mobile: 16px;
 }
 
 body {
@@ -82,7 +75,7 @@ body {
   color: var(--color-text);
   font-family: "Roboto", sans-serif;
   background-color: #000;
-  font-size: var(--font-size-body);
+  font-size: clamp(18px, 0.5vw + 1rem, 24px);
 }
 
 a {
@@ -99,10 +92,10 @@ h2 {
 }
 
 h3 {
-  font-size: clamp(24px, 2vw + 1rem, 60px);
+  font-size: clamp(24px, 2vw + 1rem, 42px);
 }
 
-h1, h3 {
+h1, h3, h4 {
   font-family: "honest";
 }
 
@@ -131,6 +124,10 @@ html {
 }
 
 /* Sections */
+section {
+  overflow: hidden;
+}
+
 .section__container {
   max-width: 1200px;
   margin: 0 auto;
@@ -155,15 +152,30 @@ html {
 .section__heading {
   margin: 0;
   letter-spacing: 2px;
-  font-size: 16px;
   text-transform: uppercase;
+  font-size: clamp(18px, 0.5vw + 1rem, 24px);
 }
 
 /* Hero */
 .hero {
+  position: relative;
   display: flex;
   align-items: center;
-  height: 35vh;
+  height: 75vh;
+}
+
+.hero__content {
+  position: relative;
+  z-index: 1;
+}
+
+.hero__image {
+  position: absolute;
+  bottom: 0;
+  right: -30%;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .hero__heading {
@@ -286,6 +298,12 @@ article:last-child {
   gap: 1rem;
   flex: 1 1 50%;
 }
+@media only screen and (min-width: 720px) {
+  .article__header {
+    border-left: 1px solid var(--color-primary);
+    padding-left: 2rem;
+  }
+}
 
 .article__heading {
   margin: 0;
@@ -304,8 +322,24 @@ article:last-child {
 
 .article__date {
   margin: 0;
-  flex: 1;
   text-align: right;
+}
+
+.about {
+  display: flex;
+  gap: 5rem;
+  align-items: center;
+}
+
+.columns {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: 1fr 1fr;
+}
+
+img {
+  flex: 1;
+  width: 50%;
 }
 
 /*# sourceMappingURL=styles.css.map */
